melhorias na responsividade

--- a/cartaconvite.html
+++ b/cartaconvite.html
@@ -17,6 +17,56 @@
     <link rel="stylesheet" href="custom.css"> <!-- Adiciona o arquivo CSS personalizado -->
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+    <style>
+        .responsive-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .figure {
+            margin-right: 1rem;
+        }
+
+        .figure-img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .text-container {
+            text-align: justify;
+        }
+
+        .text-container p {
+            font-size: 1rem;
+        }
+
+        .text-container p:last-child {
+            font-size: 4rem;
+            color: blue;
+        }
+
+        @media (max-width: 768px) {
+            .responsive-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .figure {
+                margin-right: 0;
+                margin-bottom: 1rem;
+            }
+
+            .text-container {
+                text-align: center;
+            }
+
+            .text-container p:last-child {
+                font-size: 2rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -64,80 +114,77 @@
                 por-ia_42575238.htm#query=papeis&position=47&from_view=search&track=sph">Freepik</a>
             </p>
         </div>
-        <div class="container">
-            <div style="display:flex; align-items:center; justify-content:center;">
-                <figure class="figure" style="margin-right:1rem;">
-                    <img src="img/logo3gacap.png" style="width:100%;" class="figure-img img-fluid rounded">
-                </figure>
-                <div style="text-align:justify;">
-                    <p style="font-size:1rem;">
-                        <b><u>3º Grupo de Artilharia de Campanha Autopropulsado</u></b>
-                    </p>
-                    <p style="font-size:4rem; color:blue;">Rgt MALLET</p>
-                </div>
+        <div class="responsive-container">
+            <figure class="figure">
+                <img src="img/logo3gacap.png" class="figure-img img-fluid rounded" alt="Logo">
+            </figure>
+            <div class="text-container">
+                <p><b><u>3º Grupo de Artilharia de Campanha Autopropulsado</u></b></p>
+                <p>Rgt MALLET</p>
             </div>
-            <p style="font-size:1rem;" align="justify">
-                O 3º Grupo de Artilharia de Campanha Autopropulsado, Regimento Mallet, tem a missão de realizar a
-                Solenidade
-                Nacional Alusiva ao Patrono da Arma de Artilharia (SNAPAART), antiga FENART, desde 1995, quando os
-                restos
-                mortais do nosso Eterno Comandante foram depositados em um mausoléu, nesta Organização Militar.
-            </p>
-            <p style="font-size:1rem;" align="justify">
-                Dada a importância e a projeção do evento, visualizamos promover uma grande participação de artilheiros
-                da
-                ativa e de veteranos, reforçando o nosso espírito de corpo e criando a oportunidade de reencontrar
-                antigos
-                companheiros, comandantes, chefes e subordinados, razão pela qual estamos estabelecendo o presente
-                contato.
-            </p>
-            <p style="font-size:1rem;" align="justify">
-                Para atingir esse objetivo, o Regimento Mallet apoiará os convidados, disponibilizando os seguintes
-                meios:
-            </p>
+        </div>
+        <p style="font-size:1rem;" align="justify">
+            O 3º Grupo de Artilharia de Campanha Autopropulsado, Regimento Mallet, tem a missão de realizar a
+            Solenidade
+            Nacional Alusiva ao Patrono da Arma de Artilharia (SNAPAART), antiga FENART, desde 1995, quando os
+            restos
+            mortais do nosso Eterno Comandante foram depositados em um mausoléu, nesta Organização Militar.
+        </p>
+        <p style="font-size:1rem;" align="justify">
+            Dada a importância e a projeção do evento, visualizamos promover uma grande participação de artilheiros
+            da
+            ativa e de veteranos, reforçando o nosso espírito de corpo e criando a oportunidade de reencontrar
+            antigos
+            companheiros, comandantes, chefes e subordinados, razão pela qual estamos estabelecendo o presente
+            contato.
+        </p>
+        <p style="font-size:1rem;" align="justify">
+            Para atingir esse objetivo, o Regimento Mallet apoiará os convidados, disponibilizando os seguintes
+            meios:
+        </p>
 
-            <ul style="font-size:1rem;" align="justify">
-                <li>uma <b>aeronave</b> partindo de Brasília (<b>ainda não confirmada</b>);</li>
-                <li>uma <b>aeronave</b> realizando o itinerário Rio de Janeiro/Santa Maria (<b>ainda não
-                        confirmada</b>);</li>
-                <li><b>transporte</b> na cidade de Santa Maria;</li>
-                <li><b>hospedagem</b> (HTO e Hotéis Altadomo, Dom Rafael Premium e Dom Rafael Executivo, conforme tabela
-                    anexa); e
-                </li>
-                <li><b>alimentação</b>.</li>
-            </ul><br>
+        <ul style="font-size:1rem;" align="justify">
+            <li>uma <b>aeronave</b> partindo de Brasília (<b>ainda não confirmada</b>);</li>
+            <li>uma <b>aeronave</b> realizando o itinerário Rio de Janeiro/Santa Maria (<b>ainda não
+                    confirmada</b>);</li>
+            <li><b>transporte</b> na cidade de Santa Maria;</li>
+            <li><b>hospedagem</b> (HTO e Hotéis Altadomo, Dom Rafael Premium e Dom Rafael Executivo, conforme tabela
+                anexa); e
+            </li>
+            <li><b>alimentação</b>.</li>
+        </ul><br>
 
-            <p style="font-size:1rem;" align="justify">
-                Para isso, no momento de vossa confirmação, por favor, informe suas necessidades à Seção de Relações
-                Públicas do Regimento Mallet ou a este Comandante, pelo e-mail <i>example@3gacap.eb.mil.br</i> ou pelos
-                telefones
-                (55) 99999-1111 (<b>Cap FOXTROT</b>); (55) 3333-2222, 3333-2222.
+        <p style="font-size:1rem;" align="justify">
+            Para isso, no momento de vossa confirmação, por favor, informe suas necessidades à Seção de Relações
+            Públicas do Regimento Mallet ou a este Comandante, pelo e-mail <i>example@3gacap.eb.mil.br</i> ou pelos
+            telefones
+            (55) 99999-1111 (<b>Cap FOXTROT</b>); (55) 3333-2222, 3333-2222.
+        </p>
+        <p style="font-size:1rem;" align="justify">
+            Algumas cidades foram escolhidas como prioritárias no cumprimento da nossa missão, em função da
+            existência da
+            <b>Augusta Ordem de Santa Bárbara</b>, sediada em Brasília, e da <b>Ordem dos Veteranos Artilheiros</b>,
+            sediada
+            no Rio de Janeiro. Assim, haverá o reforço de fogos da <b>AD/1</b>, por meio do <b>Cap MIKE</b>
+            que apoiará na confecção da lista de embarque, quando confirmar a aeronave. Haverá, também, o reforço do
+            1º Grupo
+            de Artilharia Antiaéra que organizará o embarque da aeronave que seguirá de Brasília. Ambos os contatos
+            já podem
+            ser realizados. O critério a ser aplicado para a reserva de assentos no voo será o da antiguidade.
+        </p>
+        <p style="font-size:1rem;" align="justify">
+            Nosso eterno Comandante abre as portas do Velho Regimento e aguarda o Sr com a Artilharia Revólver do
+            Boi de Botas
+            em posição, imediatamente à retaguarda do fosso intransponível.
+        </p>
+        <div style="font-size:1rem; text-align:center;">
+            <b>Glória ao Regimento Mallet!!! <br> Eles que venham!!!</b><br></br>
             </p>
-            <p style="font-size:1rem;" align="justify">
-                Algumas cidades foram escolhidas como prioritárias no cumprimento da nossa missão, em função da
-                existência da
-                <b>Augusta Ordem de Santa Bárbara</b>, sediada em Brasília, e da <b>Ordem dos Veteranos Artilheiros</b>,
-                sediada
-                no Rio de Janeiro. Assim, haverá o reforço de fogos da <b>AD/1</b>, por meio do <b>Cap MIKE</b>
-                que apoiará na confecção da lista de embarque, quando confirmar a aeronave. Haverá, também, o reforço do
-                1º Grupo
-                de Artilharia Antiaéra que organizará o embarque da aeronave que seguirá de Brasília. Ambos os contatos
-                já podem
-                ser realizados. O critério a ser aplicado para a reserva de assentos no voo será o da antiguidade.
-            </p>
-            <p style="font-size:1rem;" align="justify">
-                Nosso eterno Comandante abre as portas do Velho Regimento e aguarda o Sr com a Artilharia Revólver do
-                Boi de Botas
-                em posição, imediatamente à retaguarda do fosso intransponível.
-            </p>
-            <div style="font-size:1rem; text-align:center;">
-                <b>Glória ao Regimento Mallet!!! <br> Eles que venham!!!</b><br></br>
-                </p>
-            </div>
-            <div style="font-size:1rem; text-align:center;">
-                <b>NOME</b> DO CORONEL - Cel<br>
-                <b>Comandante do Regimento Mallet</b>
-            </div>
+        </div>
+        <div style="font-size:1rem; text-align:center;">
+            <b>NOME</b> DO CORONEL - Cel<br>
+            <b>Comandante do Regimento Mallet</b>
+        </div>
         </div>
     </main>
     <hr>
