--- a/hoteis.html
+++ b/hoteis.html
@@ -222,6 +222,21 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
+                    <div class="container" align="center">
+                    </div>
+                    <div class="container-convite" align="center">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="img/hoteis.png" alt="Primeiro Slide">
+                                </div>
+                                <div class="text-center">
+                                    <a href="img/hoteis.png" class="btn btn-primary" download>Baixar Imagem</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
     </main>
 
