--- a/mapa.html
+++ b/mapa.html
@@ -65,36 +65,36 @@
         </div>
         <div class="container">
             <h2>Como chegar</h2>
-            <p style="font-size:1rem;" align="justify">
-                Abaixo está o croqui que mostra as rotas e entradas para as autoridades no evento. Ele fornece uma visão
-                geral do local, destacando as principais rotas e pontos de acesso. Utilize essa imagem como um guia para
-                orientar-se e chegar facilmente ao local do evento.
-            </p>
-            <p style="font-size:1rem;" align="justify">
-            </p>
-            <div class="row d-flex justify-content-center">
-                <figure class="figure" style="margin-right:1rem; width:80%;">
-                    <img data-toggle="modal" data-target="#exampleModal" src="img/mapaevento.png" style="width:100%;"
-                        class="figure-img img-fluid rounded img-thumbnail">
-                </figure>
+                <p style="font-size:1rem;" align="justify">
+                Abaixo está o croqui que mostra as rotas e entradas para as autoridades no evento. Ele fornece uma visão geral do local, destacando as principais rotas e pontos de acesso. Utilize essa imagem 		como um guia para orientar-se e chegar facilmente ao local do evento.
+                    </p>
+                <p style="font-size:1rem;" align="justify">
+                    </p>
+                <div class="row d-flex justify-content-center">
+                    <figure class="figure" style="margin-right:1rem; width:80%;">
+                        <img data-toggle="modal" data-target="#exampleModal" src="img/mapaevento.png" style="width:100%;"
+                            class="figure-img img-fluid rounded img-thumbnail">
+                    </figure>
+                </div>
+                <div class="text-center">
+                    <a href="img/mapaevento.png" class="btn btn-primary center" download>Baixar Imagem</a>
             </div>
-
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Croqui do Evento</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="" class="modal-image" style="width: 100%;" alt="Imagem Ampliada">
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Croqui do Evento</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="" class="modal-image" style="width: 100%;" alt="Imagem Ampliada">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
         <hr>
         <footer class="text-body-secondary py-3">
