--- a/sobre.html
+++ b/sobre.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -17,6 +18,31 @@
     <link rel="stylesheet" href="custom.css"> <!-- Adiciona o arquivo CSS personalizado -->
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+    <style>
+    .img-fundo-sobre {
+    position: relative;
+    color: #ffffff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+    padding: 20px;
+    z-index: 1;
+    /* Adicione essa propriedade para garantir que o texto fique acima da imagem de fundo */
+}
+
+.img-fundo-sobre::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('img/fundosobre.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: brightness(70%) opacity(0.7) grayscale(0%);
+    z-index: -1;
+}
+    </style>
 </head>
 
 <body>
@@ -42,8 +68,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="hoteis.html">Hospedagem</a>
                 </li>
-
-
                 <li class="nav-item">
                     <a class="nav-link" href="sobre.html">Sobre</a>
                 </li>
@@ -53,10 +77,14 @@
     </nav>
 
     <!-- Begin page content -->
-    <main role="main" class="container">
+    <main role="main">
 
-        <h1>Sobre a SNAPAART</h1>
-        <hr>
+        <div class="jumbotron img-fundo-sobre">
+            <div class="container">
+                <h1 class="display-4">Sobre a SNAPAART</h1>
+            </div>
+        </div>
+        <div class="container">
         <p style="font-size:1rem;" align="justify">
             Neste evento emocionante, reunimos artilheiros e entusiastas para celebrar a coragem, dedicação e liderança
             exemplar do Marechal Emílio Luiz Mallet. Como Patrono da Arma de Artilharia, ele deixou um legado indelével
@@ -66,26 +94,37 @@
             que o Marechal Mallet personificou: profissionalismo, disciplina, determinação e comprometimento com a
             defesa da nação. É uma oportunidade para honrar sua memória e reconhecer as contribuições notáveis que ele
             fez para o aprimoramento da Artilharia.</p>
-        <div style="display:flex; align-items:center;">
-            <figure class="figure" style="margin-right:1rem;">
-                <img data-toggle="modal" data-target="#exampleModal" src="img/imagemsobre.jpeg" style="width:100%;"
-                    class="figure-img img-fluid rounded img-thumbnail">
-                <figcaption class="figure-caption" style="font-size:1.0rem;">Bateria Brigadeiro Gurjão</figcaption>
-            </figure>
-            <div style="text-align:justify;">
-                <p style="font-size:1rem;">
-                    Durante o evento, teremos a presença de autoridades militares, veteranos, estudantes e o público em
-                    geral, todos unidos em um espírito de respeito e admiração pelo legado do Marechal Mallet. A
-                    programação incluirá cerimônias solenes, discursos inspiradores e momentos de reflexão sobre a
-                    importância da Artilharia para a segurança e soberania do nosso país.
-                </p>
-                <p style="font-size:1rem;">
-                    Convidamos você a fazer parte deste momento solene e enriquecedor. Junte-se a nós nesta homenagem ao
-                    Marechal Mallet e à gloriosa Arma de Artilharia, que tanto contribui para a história e a defesa do
-                    Brasil. Sua presença é fundamental para tornar este evento ainda mais significativo.
-                </p>
-            </div>
+            
+        <div class="row">
+    <div class="col-md-6">
+        <figure class="figure" style="margin-right: 1rem;">
+            <img data-toggle="modal" data-target="#exampleModal" src="img/imagemsobre.jpeg" style="width: 100%;"
+                class="figure-img img-fluid rounded img-thumbnail">
+            <figcaption class="figure-caption" style="font-size: 1.0rem;">Bateria Brigadeiro Gurjão</figcaption>
+        </figure>
+    </div>
+    <div class="col-md-6">
+        <div style="text-align: justify;">
+            <p style="font-size: 1rem;">
+                Durante o evento, teremos a presença de autoridades militares, veteranos, estudantes e o público em geral,
+                todos unidos em um espírito de respeito e admiração pelo legado do Marechal Mallet. A programação incluirá
+                cerimônias solenes, discursos inspiradores e momentos de reflexão sobre a importância da Artilharia para
+                a segurança e soberania do nosso país.
+            </p>
+            <p style="font-size: 1rem;">
+                Convidamos você a fazer parte deste momento solene e enriquecedor. Junte-se a nós nesta homenagem ao
+                Marechal Mallet e à gloriosa Arma de Artilharia, que tanto contribui para a história e a defesa do Brasil.
+                Sua presença é fundamental para tornar este evento ainda mais significativo.
+            </p>
+            <p style="font-size:1rem;">
+            	Esteja preparado para vivenciar uma experiência única, repleta de emoção e orgulho patriótico. Nosso
+            	objetivo é manter viva a memória do Marechal Mallet e inspirar as gerações futuras a seguirem seus passos de
+            	coragem, liderança e excelência.
+            </p>
         </div>
+    </div>
+</div>
+
 
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -106,23 +145,20 @@
 
 
 
-        <p style="font-size:1rem;" align="justify">
-            Esteja preparado para vivenciar uma experiência única, repleta de emoção e orgulho patriótico. Nosso
-            objetivo é manter viva a memória do Marechal Mallet e inspirar as gerações futuras a seguirem seus passos de
-            coragem, liderança e excelência.</p>
+        
         <p style="font-size:1rem;" align="justify">
             Esperamos por você nesta Solenidade Alusiva ao Patrono da Arma de Artilharia em Santa Maria - RS, um evento
             marcante que honra a memória do Marechal Emílio Luiz Mallet e celebra o compromisso inabalável da Artilharia
             com a nossa nação. Junte-se a nós nessa jornada histórica e memorável!</p>
+        </div>
         <hr>
         <footer class="text-body-secondary py-3">
-            <div class="container">
-                <p class="mb-1" align="center">
-                    Seção de Comunicação Social (exemplo@3gacap.eb.mil.br) - Contato: (55) 3333-2222<br>&copy; Seção de
-                    Informática do 3º GAC Ap
-                </p>
-            </div>
-        </footer>
+		<div class="container">
+		    <p class="mb-1" align="center">
+		    	Seção de Comunicação Social (comsoc@3gacap.eb.mil.br) - Contato: (55) 3922-1319<br>&copy; Seção de Informática do 3º GAC Ap
+		    </p>
+		</div>
+    	</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
